--- a/index.html
+++ b/index.html
@@ -8,90 +8,126 @@
     <!--External Documents-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,300;1,300;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
     <!--Internal Documents-->
     <link rel="stylesheet" href="CSS/main.css">
 </head>
 <body>
     <nav>
-        <div class="logo">Logo Here</div>
+        <div class="logo">NetPics</div>
         <ul class="nav-con">
             <a href="/index.html"><li class="active">Page One</li></a>
-            <a href="Pages/Page2.html"><li>Page Two</li></a>
+            <li>Page Two</li>
             <li>Page Three</li>
             <li>Page Four</li>
         </ul>
     </nav>
 
     <header>
-        <div class="heading">
-            <h3>Your Week 4 Formal Assessment</h3>
-            <h1>CREATING LAYOUTS USING BOOTSTRAP GRIDS</h1>
-            <p>For this Mid Term assessment, you will recreate what you see here as closely as you can. <br> You will be required to use Bootstrap Grids for the layouts! You will hand in your Root Directory on Canvas.</p>
-            <p><strong>Assessment Start:</strong> 09:00 - 09/03/23 <br> <strong>Assessment End:</strong> 17:00 - 10/03/23</p>
-            <p><strong>Assessment Duration:</strong> 32 Hours</p>
+        <div class="tint">
+            <h3>It's A Strange World Out There...</h3>
+            <h1>STRANGER THINGS:<br><i>SEASON 17</i></h1>
+            <p>Just when you thought we couldn't milk this franchise any longer, we are back to beat that dead horse!<br>Follow our Middle Aged Pre-teens as they work low income jobs, pay taxes and wash dishes... <strong>IN THE UPSIDE DOWN!</strong></p>
+            <div class="CTAbutton">Watch Here on Netpics!</div>
         </div>
     </header>
 
     <section>
         <div class="welcome">
-            <h2>Welcome to the Web Application!</h2>
+            <h2>Sign Up for Netpics for a Free Pack of Eggos!</h2>
         </div>
     </section>
 
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <div class="PicBox"></div>
+                <div class="circle-pic"></div>
             </div>
             <div class="col-6">
                 <div class="Introduction">
-                    <h3>Introduction</h3>
-                    <h1>The 50/50 Layout</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque blanditiis laudantium ad, cumque quae sequi asperiores voluptatibus ipsum. Voluptatibus delectus consectetur quia dolorum quibusdam ut autem hic commodi ipsum quisquam?</p>
+                    <h3>Get Ready For...</h3>
+                    <h1>More Stretched Out Hands</h1>
+                    <p>Not tired of seeing Eleven using the Force and screaming MIIIIIKE! Neither are we! Tune in for the latest in bloody nosed arm stretch poses, as Eleven and the gang tackle the latest form of evil... the dreaded Mid Life Crisis!</p>
+                    <p>Don't miss out on all the latest news and info!</p>
                 </div>
-                <div class="CTAbutton">Call to Action Button</div>
+                <div class="CTAbutton">Keep Me Updated!</div>
             </div>
         </div>
         
         <div class="row">
-            <h3 class="section-head">The Mighty 25% Layout!</h3>
+            <h3 class="section-head">Where are the Gang Now...</h3>
+            <p class="section-subtitle">Get a glimpse of the horror of being over 40!</p>
             <div class="col-3">
                 <div class="profile">
-                    <div class="circlepic"></div>
-                    <p><strong>Title Here</strong></p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem ad ab impedit porro, ipsam pariatur culpa sint quos, nemo eos enim excepturi molestiae voluptatibus. Voluptatibus tempore dolores cumque est error!</p>
-                    <div class="button">Click Here</div>
+                    <div class="old-eleven"></div>
+                    <p><strong>Eleven</strong></p>
+                    <p>Working as a mid level financial manager at the local NFT investment bank, Eleven struggles  to convince her elderly patrons to spend their life savings in purchasing the latest Board Ape Yacht Club NTF's</p>
+                    <div class="button">Find Out More</div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="profile">
-                    <div class="circlepic"></div>
-                    <p><strong>Title Here</strong></p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem ad ab impedit porro, ipsam pariatur culpa sint quos, nemo eos enim excepturi molestiae voluptatibus. Voluptatibus tempore dolores cumque est error!</p>
-                    <div class="button">Click Here</div>
+                    <div class="old-mike"></div>
+                    <p><strong>Mike Wheeler</strong></p>
+                    <p>Trapped in a loveless marriage with Eleven. Mike purchases a vintage harley davidson motorcycle in hope the rest of the gang will think he is cool... Will the vapid attempt at happiness pay off? Probably not!</p>
+                    <div class="button">Find Out More</div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="profile">
-                    <div class="circlepic"></div>
-                    <p><strong>Title Here</strong></p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem ad ab impedit porro, ipsam pariatur culpa sint quos, nemo eos enim excepturi molestiae voluptatibus. Voluptatibus tempore dolores cumque est error!</p>
-                    <div class="button">Click Here</div>
+                    <div class="old-dustin"></div>
+                    <p><strong>Dustin Henderson</strong></p>
+                    <p>Struggling with crippling debt due to his Board Game addiction, Dustin attempts tp create his own Board Game called The Down Side Up, only to face legal backlash from Dungeons and Dragons, as the clear knock off fools no one!</p>
+                    <div class="button">Find Out More</div>
                 </div>
             </div>
             <div class="col-3">
                 <div class="profile">
-                    <div class="circlepic"></div>
-                    <p><strong>Title Here</strong></p>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem ad ab impedit porro, ipsam pariatur culpa sint quos, nemo eos enim excepturi molestiae voluptatibus. Voluptatibus tempore dolores cumque est error!</p>
-                    <div class="button">Click Here</div>
+                    <div class="zombie"></div>
+                    <p><strong>Eddie Munson</strong></p>
+                    <p>Dead since Season 4, Eddie returns as a Zombie! But the undead life is more than dull, as his forced to create new BAYC NFT's in Eleven's basement... No matter hard he tries to escape, he finds not even death(again) can save him now!</p>
+                    <div class="button">Find Out More</div>
                 </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <h3 class="section-head">Not Enough? We Have More!</h3>
+            <p class="section-subtitle">Please don't leave Netpics, we have more stuff! Please! We are begging you!</p>
+            <div class="col-6">
+                <div class="half">
+                    <div class="PicBox"><iframe width="550" height="350" src="https://www.youtube.com/embed/m-DsYZpkgQs?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                    <h3>Fast & Furious: Dementia Unleashed</h3>
+                    <p>Vin Diesel reprises his role as Dominic Toretto in the 27th installment of The Fast & Furious franchise... Follow Dom and the remaining living F&F crew as they try to figure out who and where they are while they spiral into dementia from all the petrol fumes inhaled in the past!</p>
+                    <div class="CTAbutton">Inaudible Grunting...</div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="half">
+                    <div class="PicBox"><iframe width="550" height="350" src="https://www.youtube.com/embed/qI5aFy56JgE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+                    <h3>Hanna V Bieber: Has-been Showdown</h3>
+                    <p>Its the Battle of the Has-beens... One Night... One Fight... One opportunity for that last 15 minutes of fame! In this controversial first of its kind fight to the death bout, we will see just who has what it takes to leave the ring alive! Place your bets!</p>
+                    <div class="CTAbutton">Place Your Bets Here</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <h3 class="section-head">Want To Visit Us?</h3>
+            <p class="section-subtitle">Nothing bad has ever happened here... We Promise!</p>
+            <div class="col-12">
+                <div class="MapBox"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7576.051782875932!2d-64.82966312533136!3d18.30042410015007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c051168c4c9f33d%3A0x4b2c4e6907c7bce7!2sLittle%20Saint%20James!5e0!3m2!1sen!2sza!4v1679472836766!5m2!1sen!2sza" width="550" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>If you can build the application above... you can build your final project!</p>
+        <p>Thanks for joining us here at Disney... Oops, we mean Netpics!</p>
     </footer>
 </body>
 </html>
