--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
 
     <footer>
         <p>Thanks for joining us here at Disney... Oops, we mean Netpics!</p>
+        <div class="social-media">
+            <div class="social"><img src="assets/social-01.svg"></div>
+            <div class="social"><img src="assets/social-02.svg"></div>
+            <div class="social"><img src="assets/social-03.svg"></div>
+            <div class="social"><img src="assets/social-04.svg"></div>
+        </div>
     </footer>
 </body>
 </html>
